tiedoston lisäys .gitignoreen

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ build
 /viikko3/HelloCucumber/.nb-gradle/
 /viikko3/LoginCucumber/.nb-gradle/
 /viikko3/WebLogin/.nb-gradle/
+/viikko3/Weblogin/salasanat.txt
+
