--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ build
 /viikko3/WebLogin/.nb-gradle/
 /viikko3/Weblogin/salasanat.txt
 
+/viikko_4/MockitoDemo/.nb-gradle/
+/viikko4/MaksukorttiMockito/.nb-gradle/
