--- a/viikko2/Verkkokauppa1/build.gradle
+++ b/viikko2/Verkkokauppa1/build.gradle
@@ -1,8 +1,6 @@
-
 apply plugin: 'java'
-
 apply plugin: 'application'
-
+apply plugin: 'jacoco'
 repositories {
     jcenter()
 }
@@ -14,6 +12,7 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-context-support', version:'5.2.0.RELEASE'
     compile group: 'org.springframework', name: 'spring-beans', version:'5.2.0.RELEASE'    
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:3.1.0'
 }
 
 mainClassName = 'ohtu.Main'
