--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ salasanat.txt
 
 /viikko_4/MockitoDemo/.nb-gradle/
 /viikko4/MaksukorttiMockito/.nb-gradle/
+/viikko4/IntJoukkoSovellus/.nb-gradle/
+/viikko4/Tennis/.nb-gradle/
+/viikko1/tehtavat14-16/NhlStatistics1/.nb-gradle/
